fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,7 @@
     box-sizing: border-box;
 }
 
-/* * > * {
-    outline: 2px solid red;
-} */
-
 * + * {
-    /* margin-block-start: 1.5rem; */
     margin-block-start: var(--space, 1.5rem);
 }
 
@@ -20,22 +15,23 @@
 }
 
 html {
+    height: 100vh;
     font-family: sans-serif;
 }
 
 body {
+    min-height: 100vh;
     max-width: 48em;
     margin-block: 0;
     margin-inline: auto;
     padding: 0;
-    font-size: 1.25em;
-
     display: grid;
-    grid-template-rows: auto minmax(55vh, auto) auto;
+    grid-auto-rows: auto 1fr auto;
+    font-size: 1.25em;
 }
 
 header {
-    --space: 0;
+    margin-block-start: 0;
     padding-block: 0.5em;
     padding-inline: var(--pageSpace);
     background-color: whitesmoke;
@@ -43,13 +39,13 @@ header {
 
 main {
     --space: 2rem;
+    min-height: 30vh;
     padding-inline: var(--contentSpace);
 }
 
 footer {
-    margin-block-start: 6em;
-    margin-block-end: var(--pageSpace);
-    margin-inline: var(--pageSpace);
+    margin-block-start: 2em;
+    margin-block-end: 0;
     padding: var(--contentSpace);
     background-color: whitesmoke;
 }
@@ -81,8 +77,6 @@ h1 {
 }
 
 h2 {
-    /* margin-block-start: 0; */
-    /* --space: 0; */
     font-size: 1.05em;
 }
 
@@ -208,13 +202,20 @@ button,
     width: 100%;
     min-height: 2.75rem;
     padding: 0.6em;
+    display: flow-root;
     -webkit-appearance: none;
-    color: white;
+    color: var(--btnCl, white);
     text-decoration: none;
     border: none;
     border-radius: var(--borderRadius);
-    background-color: black;
+    background-color: var(--btnBg, black);
     box-shadow: 0 0.375rem 0 -0.125rem silver;
+}
+
+.button__secondary {
+    --btnBg: silver;
+    --btnCl: black;
+    box-shadow: none;
 }
 
 a.button {
@@ -243,11 +244,6 @@ a.button {
     }
 }
 
-.content {
-    outline: 1px solid red;
-    height: 100%;
-}
-
 .controls {
     display: flex;
     flex-direction: column;
@@ -256,9 +252,7 @@ a.button {
 
 @media screen and (min-width: 32em) {
     .controls {
-        justify-content: flex-end;
-        flex-direction: row-reverse;
-        align-items: center;
+        align-items: flex-start;
         gap: 1em;
     }
     .controls * + * {
@@ -268,7 +262,6 @@ a.button {
 
 .card {
     padding-inline-start: 0.75em;
-    /* padding-inline-end: 1em; */
     display: flex;
     justify-content: space-between;
     overflow: hidden;
